Fix: Z-index on spotify

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -301,6 +301,7 @@ h2 {
   width: 330px;
   background: var(--secondary-background);
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
+  z-index: 999;
   border-radius: 11px;
   -webkit-border-radius: 11px;
   -moz-border-radius: 11px;
